--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -1,19 +1,22 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
   - main
 
 pool:
   vmImage: ubuntu-latest
 
-steps:
-  - script: echo Hello, world, changed!
-    displayName: "Run a one-line script"
+jobs:
+  - job: Job1
+    steps:
+      - script: echo Job1 Hello, world, changed!
+        displayName: "Run a one-line script"
 
-  - script: |
-      echo Add other tasks to build, test, and deploy your project.
-      echo See https://aka.ms/yaml
-    displayName: "Run a multi-line script"
+      - script: |
+          echo Add other tasks to build, test, and deploy your project.
+          echo See https://aka.ms/yaml
+          echo more information
+        displayName: "Run a multi-line script"
+
+  - job: Job2
+    steps:
+      - script: echo Hello, world, changed to job2!
+        displayName: "Run a one-line script job 2"
