--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -17,6 +17,12 @@ jobs:
         displayName: "Run a multi-line script"
 
   - job: Job2
+    dependsOn: Job1
     steps:
       - script: echo Hello, world, changed to job2!
-        displayName: "Run a one-line script job 2"
+        displayName: "Run a one-line scriptw job 2"
+  - job: Job3
+    dependsOn: Job2
+    steps:
+      - script: echo Hello, world, changed to job3!
+        displayName: "Run a one-line script job 3"
